Modification:Added enable/decableconfiguration for csrf token

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -20,3 +20,5 @@ spring.rest.authentication.jwt.sub=raastech
 spring.rest.authentication.jwt.saltKey=raastech
 spring.rest.authentication.jwt.exp=6
 spring.rest.authentication.uuid.exp=6
+
+spring.rest.csrf.enable=true
