Modification:Added configuration of the csrf url

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -14,7 +14,7 @@ sub=raastech
 saltKey=raastech
 expirationTime=6
 
-spring.rest.authentication.name=UUID
+spring.rest.authentication.name=JWT
 spring.rest.authentication.jwt.iss=raastech
 spring.rest.authentication.jwt.sub=raastech
 spring.rest.authentication.jwt.saltKey=raastech
@@ -22,3 +22,4 @@ spring.rest.authentication.jwt.exp=6
 #spring.rest.authentication.uuid.exp=6
 
 spring.rest.csrf.enable=true
+spring.rest.csrf.url=/api/csrf
