Modification:Add CSRF request matcher for login url

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -16,20 +16,20 @@ expirationTime=6
 
 
 
-spring.rest.authentication.name=JWT
-spring.rest.authentication.jwt.iss=raastech
-spring.rest.authentication.jwt.sub=raastech
-spring.rest.authentication.jwt.saltKey=raastech
-spring.rest.authentication.jwt.exp=6
-spring.rest.authentication.uuid.exp=6
+spring.security.rest.authentication.name=JWT
+spring.security.rest.authentication.jwt.iss=dminc
+spring.security.rest.authentication.jwt.sub=dminc
+spring.security.rest.authentication.jwt.saltKey=dminc
+spring.security.rest.authentication.jwt.exp=6
+spring.security.rest.authentication.uuid.exp=6
 
 spring.security.rest.fully.authenticated.role=IS_FULLY_AUTHENTICATED
 
-spring.security.rest.csrf.enable=false
-spring.security.rest.csrf.url=/api/csrf
+spring.security.rest.csrf.enable=true
 
 spring.security.rest.username.key=user
 spring.security.rest.password.key=pass
 spring.security.rest.auth.token.key=X-Auth-Token
 spring.security.rest.login.url=/api/login
 spring.security.rest.logout.session=false
+spring.security.rest.csrf.exclude.urls=/api/user,/api/open
