--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -31,7 +31,8 @@ spring.security.rest.username.key=user
 spring.security.rest.password.key=pass
 spring.security.rest.auth.token.key=X-Auth-Token
 spring.security.rest.login.url=/api/login
-spring.security.rest.logout.session=false
+spring.security.rest.logout.url=/api/logout
+spring.security.rest.logout.session=true
 spring.security.rest.csrf.exclude.urls=/api/user,/api/open
 
 spring.security.rest.password.encoder.algorithm=BCrypt
